# unn-cpp

./: .gitignore  README.md
first-year(2021-2022)/atm/: ATM.cpp  ATM.h  ATM.sln  ATM.vcxproj  ATM.vcxproj.filters  ProcessingСenter.cpp  ProcessingСenter.h  Vector.h  main.cpp
first-year(2021-2022)/atm/Debug/: ATM.exe.recipe  ATM.ilk  ATM.vcxproj.FileListAbsolute.txt  vc142.idb
first-year(2021-2022)/atm/Debug/ATM.tlog/: ATM.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
first-year(2021-2022)/atm/x64/Debug/: ATM.exe.recipe  ATM.ilk  ATM.vcxproj.FileListAbsolute.txt  vc142.idb
first-year(2021-2022)/atm/x64/Debug/ATM.tlog/: ATM.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  (+3 more)
first-year(2021-2022)/fraction-complex/Inf/: Fractions.cpp  Fractions.h  Inf.cpp  Inf.sln  Inf.vcxproj  Inf.vcxproj.filters  Tcomplex.h  Сomplex.cpp  Сomplex.h
first-year(2021-2022)/fraction-complex/Inf/Debug/: Inf.exe.recipe  Inf.ilk  Inf.vcxproj.FileListAbsolute.txt  fractions.obj.enc  vc142.idb
first-year(2021-2022)/snake-game/SnakeGame/: Food.cpp  Food.h  Game.cpp  Game.h  GameMap.cpp  GameMap.h  Snake.cpp  Snake.h  SnakeGame.cpp  SnakeGame.sln  SnakeGame.vcxproj  SnakeGame.vcxproj.filters
first-year(2021-2022)/snake-game/SnakeGame/Debug/: SnakeGame.exe.recipe  SnakeGame.ilk  SnakeGame.vcxproj.FileListAbsolute.txt  vc142.idb
first-year(2021-2022)/vector/Lab_6/: Lab_6.cpp  Lab_6.sln  Lab_6.vcxproj  Lab_6.vcxproj.filters  MyVector.h  Position.h
first-year(2021-2022)/vector/Lab_6/Debug/: Lab_6.exe.recipe  Lab_6.ilk  Lab_6.vcxproj.FileListAbsolute.txt  vc142.idb
second-year(2022-2023)/Tables/: CMakeLists.txt  main.cpp
second-year(2022-2023)/Tables/include/: TDataValue.h  TTable.h  TTableRecord.h
second-year(2022-2023)/Tables/include/data-structure/: TWordsInWarAndPeace.h
second-year(2022-2023)/Tables/include/data-structure/utility/: TAVLTreeNode.h  TTableRecord.h
second-year(2022-2023)/Tables/include/storage-structure/: TAVLTreeTable.h  TArrayHashTable.h  TListHashTable.h  TScanTable.h  TSortTable.h
second-year(2022-2023)/Tables/include/storage-structure/utility/: TArrayTable.h  THashTable.h  TTable.h
second-year(2022-2023)/Tables/include/utility/: InputHandler.h  TArrayTable.h  TDataValue.h  THashTable.h  TTable.h  TTableRecord.h  Timer.h  Writer.h
second-year(2022-2023)/Tables/include/utility/IO/: InputHandler.h  Writer.h
second-year(2022-2023)/Tables/include/utility/exception/: MyException.h  TDatCom.h
second-year(2022-2023)/Tables/include/utility/hash-function/: IHashFunction.h  StringHashFunction.h
second-year(2022-2023)/Tables/include/utility/perfomance-testing/: TestingConversion.h  TestingTScanTable.h  TestingTable.h  TestingTableOperations.h  Timer.h
second-year(2022-2023)/Tables/include/utility/sorting/: BubbleSort.h  HeapSort.h  ISorting.h  InsertionSort.h  MergeSort.h  QuickSort.h  Sorting.h  StdSort.h
second-year(2022-2023)/Tables/source/: TDataValue.cpp  TTable.cpp  TTableRecord.cpp
second-year(2022-2023)/Tables/source/data-structure/: TWordsInWarAndPeace.cpp
second-year(2022-2023)/Tables/source/data-structure/utility/: TDatCom.cpp  TDataValue.cpp  TTreeNode.cpp
second-year(2022-2023)/Tables/source/storage-structure/: TAVLTreeTable.cpp  TArrayHashTable.cpp  TListHashTable.cpp  TScanTable.cpp  TSortTable.cpp  TTreeTable.cpp
second-year(2022-2023)/Tables/source/storage-structure/utility/: TArrayTable.cpp  TTable.cpp
second-year(2022-2023)/Tables/source/utility/: InputHandler.cpp  MyException.cpp  TArrayTable.cpp  TDatCom.cpp  TDataValue.cpp  THashTable.cpp  TTable.cpp  TTableRecord.cpp  Timer.cpp  Writer.cpp
second-year(2022-2023)/Tables/source/utility/IO/: InputHandler.cpp  Writer.cpp
second-year(2022-2023)/Tables/source/utility/exception/: MyException.cpp  TDatCom.cpp
second-year(2022-2023)/Tables/source/utility/hash-function/: StringHashFunction.cpp
second-year(2022-2023)/Tables/source/utility/perfomance-testing/: TestingConversion.cpp  TestingTScanTable.cpp  TestingTable.cpp  TestingTableConversion.cpp  Timer.cpp
second-year(2022-2023)/Tables/source/utility/sorting/: BubbleSort.cpp  HeapSort.cpp  InsertionSort.cpp  MergeSort.cpp  QuickSort.cpp  Sorting.cpp
second-year(2022-2023)/bitfield-master/src/: tbitfield.cpp  tset.cpp
second-year(2022-2023)/bitfield-master/test/: test_tbitfield.cpp  test_tset.cpp
second-year(2022-2023)/matrix/03_Matrix/: utmatrix.h
second-year(2022-2023)/matrix/03_Matrix/Debug/: 03_TestMatrix.exe.recipe  vc143.idb
second-year(2022-2023)/postfix-expressions/: PostfixExpressions.sln  README.md
second-year(2022-2023)/postfix-expressions/PostfixExpressions/: ExpressionSeparator.cpp  ExpressionSeparator.h  ExpressionValidator.cpp  ExpressionValidator.h  PostfixExpessions.cpp  PostfixExpessions.h  PostfixExpressions.vcxproj  PostfixExpressions.vcxproj.filters  TStack.h  Table.h  main.cpp
second-year(2022-2023)/postfix-expressions/test/: test.cpp  test.vcxproj
second-year(2022-2023)/tables/: CMakeLists.txt
second-year(2022-2023)/tables/include/data-structure/: TWordsInWarAndPeace.h
second-year(2022-2023)/tables/include/storage-structure/: TAVLTreeTable.h  TScanTable.h  TTreeTable.h
second-year(2022-2023)/tables/source/storage-structure/: TScanTable.cpp  TSortTable.cpp
(+56 files in other folders)
